update app definitions
Signed-off-by: Pranav Gaikwad <pgaikwad@redhat.com>

--- a/hub/98.ticket-monster/00.app.json
+++ b/hub/98.ticket-monster/00.app.json
@@ -7,7 +7,7 @@
 		"url": "https://github.com/pranavgaikwad/kai-hub-data/",
 		"branch": "main",
 		"tag": "",
-		"path": "source/ticket-monster"
+		"path": "source/98.ticket-monster"
 	},
 	"binary": "",
 	"review": null,
