--- a/hub/99.kitchensink/00.app.json
+++ b/hub/99.kitchensink/00.app.json
@@ -7,7 +7,7 @@
 		"url": "https://github.com/pranavgaikwad/kai-hub-data/",
 		"branch": "main",
 		"tag": "",
-		"path": "source/kitchensink"
+		"path": "source/99.kitchensink"
 	},
 	"binary": "",
 	"review": null,
